# mhc-mlx

./: .gitignore  BENCHMARKS.csv  CONTRIBUTING.md  LICENSE  MANIFEST.in  ONBOARDING.md  README.md  SECURITY.md  benchmark.py  compare_mhc.py  debug_grad.py  mhc.py  mhc_tuning.json  pyproject.toml  requirements.txt  test.py  test_correctness.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
docs/: ONBOARDING.md
examples/: patch_llama_mock.py
kernels/: mhc_backward_dM.metal  mhc_backward_d_rms_weight.metal  mhc_forward_agg_bf16.metal  mhc_fused.metal  mhc_mix.metal  sinkhorn_knopp.metal  sinkhorn_knopp_backward.metal  stream_mix_add.metal  stream_mix_add_rms_bf16.metal  stream_mix_add_rms_fp16.metal  stream_mix_add_rms_tile.metal  stream_mix_add_rms_tile_bf16.metal  stream_mix_add_rms_tile_f32.metal
mhc_mlx/: __init__.py  benchmark.py  diagnostics.py  kernels_embedded.py  layer.py  metal.py  patching.py  reference.py  utils.py
mhc_mlx/kernels/: mhc_backward_dH_post.metal  mhc_backward_dH_pre.metal  mhc_backward_dH_pre_post.metal  mhc_backward_dM.metal  mhc_backward_dx.metal  mhc_backward_dx_col.metal  mhc_backward_fused_dx.metal  mhc_backward_grads_fused.metal  mhc_backward_prep.metal  mhc_backward_prep_tile.metal  mhc_backward_rms_reduce.metal  mhc_forward_agg.metal  mhc_forward_rms_reduce.metal  mhc_fused.metal  residual_add_agg.metal  sinkhorn_knopp.metal  sinkhorn_knopp_backward.metal  stream_mix_add_rms.metal  stream_mix_add_rms_bf16.metal  stream_mix_add_rms_col.metal  stream_mix_add_rms_col_bf16.metal  stream_mix_add_rms_fp16.metal  stream_mix_add_rms_tile2d_bf16.metal  stream_mix_add_rms_tile2d_fp16.metal  stream_mix_add_rms_tile_fp16.metal  stream_mix_backward_dx.metal
mlx_mhc/: __init__.py
scripts/: bench_backward.py  bench_mix_variants.py  bench_residual.py  benchmark.py  compare_with_mlx_mhc.py  embed_kernels_py.py  plot_benchmark_speedup.py  record_benchmarks.py  run_correctness.py  summarize_benchmarks.py  tune.py
temp_sdist/mlx_mhc-0.4.0/: LICENSE  PKG-INFO  README.md  pyproject.toml  requirements.txt
temp_sdist/mlx_mhc-0.4.0/mlx_mhc/: __init__.py  benchmark.py  mhc.py  sinkhorn.py
temp_sdist/mlx_mhc-0.4.0/tests/: test_benchmark.py  test_mhc.py  test_sinkhorn.py
tests/: test_concurrency.py  test_correctness.py  test_determinism.py  test_folding.py  test_packaging.py  test_patching.py  test_quantized.py  test_rewire.py  test_stability.py  test_stress.py  test_vision.py
