[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mhc-mlx"
version = "0.1.0"
description = "MLX + Metal port of mHC (Manifold-Constrained Hyper-Connections) with a reference path"
requires-python = ">=3.10"
dependencies = [
  "mlx>=0.30.0",
]

[tool.setuptools]
packages = ["mhc_mlx"]
