[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mhc-mlx"
version = "0.1.0"
description = "MLX + Metal port of mHC (Manifold-Constrained Hyper-Connections) with a reference path"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "svdrecbd" }]
dependencies = [
  "mlx>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools]
packages = ["mhc_mlx"]
py-modules = ["mhc"]
include-package-data = true

[tool.setuptools.package-data]
"mhc_mlx" = ["kernels/*.metal"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "stress: long-running tests (enable with MHC_MLX_RUN_STRESS=1)",
]
