[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mhc-mlx"
version = "0.4.5"
description = "High-performance MLX implementation of Manifold-Constrained Hyper-Connections (mHC)"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Salvador Escobedo", email = "svdrecbd@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "mlx>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/svdrecbd/mhc-mlx"
Repository = "https://github.com/svdrecbd/mhc-mlx"
Issues = "https://github.com/svdrecbd/mhc-mlx/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "build",
  "twine",
  "ruff",
]
bench = [
  "matplotlib",
]

[project.scripts]
mhc-mlx-info = "mhc_mlx.diagnostics:main"
mhc-mlx-bench = "scripts.benchmark:main"

[tool.setuptools]
packages = ["mhc_mlx", "mlx_mhc"]
include-package-data = true

[tool.setuptools.package-data]
"mhc_mlx" = ["kernels/*.metal"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "stress: long-running tests (enable with MHC_MLX_RUN_STRESS=1)",
]