[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-mhc"
dynamic = ["version", "dependencies"]
description = "MLX implementation of Manifold-Constrained Hyper-Connections (mHC) for Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MA"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["mlx", "apple silicon", "deep learning", "transformers", "mhc", "hyper-connections"]

[project.urls]
Homepage = "https://github.com/ml-explore/mlx-mhc"
Repository = "https://github.com/ml-explore/mlx-mhc"

[tool.setuptools.packages.find]
include = ["mlx_mhc*"]

[tool.setuptools.dynamic]
version = {attr = "mlx_mhc.version.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
tdd_guard_project_root = "/Users/ma/mlx-mhc"
